--- a/trucking.html
+++ b/trucking.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="icon" type="image/x-icon" href="img/Penguin-Asia.png">
+    <link rel="icon" type="image/x-icon" href="img/Penguin-Asia.png">
 </head>
 
 <body class="bg-[#DFE3E3]">
@@ -33,7 +33,8 @@
                             class="absolute right-0 w-[400px] hidden bg-[#1E1D1D] text-white shadow-md rounded-md group-hover:block">
                             <li><a href="bridal-car.html" class="block px-4 py-2 hover:bg-[#E3A262]">Bridal Car
                                     Services</a></li>
-                            <li><a href="towing.html" class="block px-4 py-2 hover:bg-[#E3A262]">Towing Services 24/7</a>
+                            <li><a href="towing.html" class="block px-4 py-2 hover:bg-[#E3A262]">Towing Services
+                                    24/7</a>
                             </li>
                             <li><a href="trucking.html" class="block px-4 py-2 hover:bg-[#E3A262]">Trucking
                                     Services</a></li>
@@ -49,32 +50,33 @@
                         </ul>
                     </li>
                     <li><a href="about.html" class="hover:text-[#E3A262]">About</a></li>
-                    <li><a href="contact.html" class="bg-[#E3A262] p-2 px-4 rounded-full text-[#ffffff]"><i class='bx bxs-phone' style='color:#ffffff' ></i> Call Now</a></li>
+                    <li><a href="contact.html" class="bg-[#E3A262] p-2 px-4 rounded-full text-[#ffffff]"><i
+                                class='bx bxs-phone' style='color:#ffffff'></i> Call Now</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <div class="h-[400px]"
-        style="background-image:url(img/towing-header.jpg); background-size: cover; background-position:center;">
+        style="background-image:url(img/service.jpg); background-size: cover; background-position:center;">
         <nav class="container mx-auto px-6 py-4 text-[#1E1D1D]">
             <ul class="flex space-x-2">
                 <li><a href="/" class="hover:font-bold">Home</a></li>
                 <li>/</li>
                 <li><a href="services.html" class="hover:font-bold">Services</a></li>
                 <li>/</li>
-                <li><a href="bridal-car.html" class="active hover:font-bold">Towing Services 24/7</a></li>
+                <li><a href="bridal-car.html" class="active hover:font-bold">Trucking Services</a></li>
             </ul>
         </nav>
-        <h2 class="text-4xl font-bold text-center text-[#D6AB6C] mt-[20px]">Towing Services 24/7</h2>
+        <h2 class="text-4xl font-bold text-center text-[#D6AB6C] mt-[20px]">Trucking Services</h2>
         <p
             class="text-center text-white mt-10 mx-auto max-w-[80vw] bg-black rounded-lg bg-opacity-50 p-10 text-justify">
-            Get reliable and professional towing services 24/7 whenever you need them. Our fleet of modern tow trucks
-            and experienced operators ensure safe and efficient vehicle transport, whether for breakdowns, accidents,
-            or relocations. We provide both emergency and scheduled towing, catering to cars, motorcycles, and even
-            heavy-duty vehicles. With a focus on safety and customer satisfaction, we guarantee prompt response times
-            and secure handling of your vehicle. Whether you’re stranded on the road or need assistance moving your
-            vehicle, trust us to get the job done with care and precision.
+            Our trucking services provide reliable and efficient transportation solutions for various industries.
+            Whether you need to transport goods, heavy equipment, or materials, our fleet of well-maintained trucks
+            ensures safe and timely delivery. With experienced drivers and a commitment to excellence, we guarantee
+            smooth logistics and cost-effective solutions. No matter the distance or cargo size, we are dedicated
+            to meeting your transportation needs with professionalism and reliability.
         </p>
+
 
     </div>
 
@@ -82,39 +84,39 @@
         <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- Service 1 -->
             <div class="bg-white shadow-lg rounded-lg overflow-hidden transition-transform transform hover:scale-105">
-                <img src="img/roadside-assistnace.JPG" alt="Roadside Assistance" class="w-full h-[300px] object-cover">
+                <img src="img/logi.jpg" alt="Logistics & Freight" class="w-full h-[300px] object-cover">
                 <div class="p-6">
-                    <h3 class="text-2xl font-semibold text-[#D6AB6C] mb-3">Service Coverage</h3>
+                    <h3 class="text-2xl font-semibold text-[#D6AB6C] mb-3">Logistics & Freight</h3>
                     <ul class="list-disc text-justify space-y-3 px-6">
-                        <li>24/7 emergency towing for all vehicle types.</li>
-                        <li>Local and long-distance vehicle transport.</li>
-                        <li>Accident recovery and roadside assistance.</li>
+                        <li>Local and long-distance freight hauling.</li>
+                        <li>Efficient logistics management for timely deliveries.</li>
+                        <li>Customized transportation solutions for businesses.</li>
                     </ul>
                 </div>
             </div>
 
             <!-- Service 2 -->
             <div class="bg-white shadow-lg rounded-lg overflow-hidden transition-transform transform hover:scale-105">
-                <img src="img/flat-tire.jpg" alt="Accident Recovery" class="w-full h-[300px] object-cover">
+                <img src="img/truck.jpg" alt="Construction Hauling" class="w-full h-[300px] object-cover">
                 <div class="p-6">
-                    <h3 class="text-2xl font-semibold text-[#D6AB6C] mt-6 mb-3">Equipment & Safety</h3>
+                    <h3 class="text-2xl font-semibold text-[#D6AB6C] mt-6 mb-3">Construction Hauling</h3>
                     <ul class="list-disc text-justify space-y-3 px-6">
-                        <li>Modern tow trucks for secure and damage-free towing.</li>
-                        <li>Flatbed and wheel-lift towing options available.</li>
-                        <li>Experienced operators ensuring safe handling of your vehicle.</li>
+                        <li>Heavy-duty trucks for transporting construction materials.</li>
+                        <li>Safe and secure handling of bulk loads.</li>
+                        <li>Flexible hauling options to meet project requirements.</li>
                     </ul>
                 </div>
             </div>
 
             <!-- Service 3 -->
             <div class="bg-white shadow-lg rounded-lg overflow-hidden transition-transform transform hover:scale-105">
-                <img src="img/heavy.jpg" alt="Heavy-Duty Towing" class="w-full h-500 object-cover">
+                <img src="img/delivery.jpg" alt="Commercial Delivery" class="w-full h-[300px] object-cover">
                 <div class="p-6">
-                    <h3 class="text-2xl font-semibold text-[#D6AB6C] mt-6 mb-3">Pricing & Reliability</h3>
+                    <h3 class="text-2xl font-semibold text-[#D6AB6C] mt-6 mb-3">Commercial Delivery</h3>
                     <ul class="list-disc text-justify space-y-3 px-6">
-                        <li>Fast response times to minimize wait and inconvenience.</li>
-                        <li>Affordable, transparent pricing with no hidden fees.</li>
-                        <li>Trusted service provider with a proven track record.</li>
+                        <li>Reliable transportation of commercial goods.</li>
+                        <li>Fleet of modern trucks to handle diverse cargo needs.</li>
+                        <li>Real-time tracking for secure and on-time deliveries.</li>
                     </ul>
                 </div>
             </div>
