--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="icon" type="image/x-icon" href="img/Penguin-Asia.png">
+
 </head>
 
 <body class="bg-[#DFE3E3]">
