--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a href="about.html" class="hover:text-[#E3A262]">About</a></li>
+                    <li><a href="about.html" class="active hover:text-[#E3A262]">About</a></li>
                     <li><a href="contact.html" class="bg-[#E3A262] p-2 px-4 rounded-full text-[#ffffff]"><i
                                 class='bx bxs-phone' style='color:#ffffff'></i> Call Now</a></li>
                 </ul>
