--- a/towing.html
+++ b/towing.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="icon" type="image/x-icon" href="img/Penguin-Asia.png">
+    <link rel="icon" type="image/x-icon" href="img/Penguin-Asia.png">
 </head>
 
 <body class="bg-[#DFE3E3]">
@@ -24,6 +24,15 @@
                     alt="company-logo">
                 <h1 class="text-2xl font-bold text-[#E3A262]">Penguin Sales & Services Company</h1>
             </a>
+            <div class="flex-grow hidden lg:block ms-[5vw] xl:ms-[15vw] me-auto">
+                <form class="flex ">
+                    <input type="text" placeholder="Search..."
+                        class="w-80 px-4 py-2 rounded-l-full text-[#1E1D1D] focus:outline-none">
+                    <button type="submit" class="bg-white px-4 py-2 rounded-r-full text-[#1E1D1D] hover:bg-[#D6AB6C]">
+                        <i class='bx bx-search text-xl'></i>
+                    </button>
+                </form>
+            </div>
             <nav>
                 <ul class="flex space-x-6 text-[#D6AB6C]">
                     <li class="relative group">
@@ -33,7 +42,8 @@
                             class="absolute right-0 w-[400px] hidden bg-[#1E1D1D] text-white shadow-md rounded-md group-hover:block">
                             <li><a href="bridal-car.html" class="block px-4 py-2 hover:bg-[#E3A262]">Bridal Car
                                     Services</a></li>
-                            <li><a href="towing.html" class="block px-4 py-2 hover:bg-[#E3A262]">Towing Services 24/7</a>
+                            <li><a href="towing.html" class="block px-4 py-2 hover:bg-[#E3A262]">Towing Services
+                                    24/7</a>
                             </li>
                             <li><a href="trucking.html" class="block px-4 py-2 hover:bg-[#E3A262]">Trucking
                                     Services</a></li>
@@ -49,7 +59,8 @@
                         </ul>
                     </li>
                     <li><a href="about.html" class="hover:text-[#E3A262]">About</a></li>
-                    <li><a href="contact.html" class="bg-[#E3A262] p-2 px-4 rounded-full text-[#ffffff]"><i class='bx bxs-phone' style='color:#ffffff' ></i> Call Now</a></li>
+                    <li><a href="contact.html" class="bg-[#E3A262] p-2 px-4 rounded-full text-[#ffffff]"><i
+                                class='bx bxs-phone' style='color:#ffffff'></i> Call Now</a></li>
                 </ul>
             </nav>
         </div>
