--- a/trucking.html
+++ b/trucking.html
@@ -24,6 +24,15 @@
                     alt="company-logo">
                 <h1 class="text-2xl font-bold text-[#E3A262]">Penguin Sales & Services Company</h1>
             </a>
+            <div class="flex-grow hidden lg:block ms-[5vw] xl:ms-[15vw] me-auto">
+                <form class="flex ">
+                    <input type="text" placeholder="Search..."
+                        class="w-80 px-4 py-2 rounded-l-full text-[#1E1D1D] focus:outline-none">
+                    <button type="submit" class="bg-white px-4 py-2 rounded-r-full text-[#1E1D1D] hover:bg-[#D6AB6C]">
+                        <i class='bx bx-search text-xl'></i>
+                    </button>
+                </form>
+            </div>
             <nav>
                 <ul class="flex space-x-6 text-[#D6AB6C]">
                     <li class="relative group">
