--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
         </div>
     </header>
     <div class="h-[400px]"
-        style="background-image:url(img/service.jpg); background-size: cover; background-position:center;">
+        style="background-image:url(img/about.avif); background-size: cover; background-position:bottom;">
         <nav class="container mx-auto px-6 py-4 text-[#1E1D1D]">
             <ul class="flex space-x-2">
                 <li><a href="/" class="hover:font-bold">Home</a></li>
