--- a/heavy-equipment.html
+++ b/heavy-equipment.html
@@ -44,7 +44,7 @@
                                     style="color:#e3a262"></i></a>
                             <ul
                                 class="absolute right-0 w-[400px] hidden bg-[#1E1D1D] text-white shadow-md rounded-md group-hover:block">
-                                <li><a href="bridal-car.html" class="block px-4 py-2 hover:bg-[#E3A262] text-[#E3A262] hover:text-white">Bridal Car
+                                <li><a href="bridal-car.html" class="block px-4 py-2 hover:bg-[#E3A262]">Bridal Car
                                         Services</a></li>
                                 <li><a href="towing.html" class="block px-4 py-2 hover:bg-[#E3A262]">Towing Services 24/7</a>
                                 </li>
@@ -54,7 +54,7 @@
                                         Construction & Maintenance</a></li>
                                 <li><a href="auto-parts.html" class="block px-4 py-2 hover:bg-[#E3A262]">Auto Parts</a>
                                 </li>
-                                <li><a href="heavy-equipment.html" class="block px-4 py-2 hover:bg-[#E3A262]">Heavy
+                                <li><a href="heavy-equipment.html" class="block px-4 py-2 hover:bg-[#E3A262] text-[#E3A262] hover:text-white">Heavy
                                         Equipment Rental</a></li>
                                 <li><a href="furniture-hotel-residential.html"
                                         class="block px-4 py-2 hover:bg-[#E3A262]">Furniture Hotel & Residential</a>
