--- a/trucking.html
+++ b/trucking.html
@@ -36,7 +36,7 @@
             <nav>
                 <ul class="flex space-x-6 text-[#D6AB6C]">
                     <li class="relative group">
-                        <a href="services.html" class="hover:text-[#E3A262]">Services<i class='bx bx-caret-down'
+                        <a href="services.html" class="active hover:text-[#E3A262]">Services<i class='bx bx-caret-down'
                                 style="color:#e3a262"></i></a>
                         <ul
                             class="absolute right-0 w-[400px] hidden bg-[#1E1D1D] text-white shadow-md rounded-md group-hover:block">
@@ -45,7 +45,7 @@
                             <li><a href="towing.html" class="block px-4 py-2 hover:bg-[#E3A262]">Towing Services
                                     24/7</a>
                             </li>
-                            <li><a href="trucking.html" class="block px-4 py-2 hover:bg-[#E3A262]">Trucking
+                            <li><a href="trucking.html" class="block px-4 py-2 hover:bg-[#E3A262] text-[#E3A262] hover:text-white">Trucking
                                     Services</a></li>
                             <li><a href="construction.html" class="block px-4 py-2 hover:bg-[#E3A262]">General
                                     Construction & Maintenance</a></li>
