--- a/construction.html
+++ b/construction.html
@@ -44,13 +44,13 @@
                                     style="color:#e3a262"></i></a>
                             <ul
                                 class="absolute right-0 w-[400px] hidden bg-[#1E1D1D] text-white shadow-md rounded-md group-hover:block">
-                                <li><a href="bridal-car.html" class="block px-4 py-2 hover:bg-[#E3A262] text-[#E3A262] hover:text-white">Bridal Car
+                                <li><a href="bridal-car.html" class="block px-4 py-2 hover:bg-[#E3A262]">Bridal Car
                                         Services</a></li>
                                 <li><a href="towing.html" class="block px-4 py-2 hover:bg-[#E3A262]">Towing Services 24/7</a>
                                 </li>
                                 <li><a href="trucking.html" class="block px-4 py-2 hover:bg-[#E3A262]">Trucking
                                         Services</a></li>
-                                <li><a href="construction.html" class="block px-4 py-2 hover:bg-[#E3A262]">General
+                                <li><a href="construction.html" class="block px-4 py-2 hover:bg-[#E3A262] text-[#E3A262] hover:text-white">General
                                         Construction & Maintenance</a></li>
                                 <li><a href="auto-parts.html" class="block px-4 py-2 hover:bg-[#E3A262]">Auto Parts</a>
                                 </li>
