--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                 <li>/</li>
                 <li><a href="services.html" class="hover:font-bold">Services</a></li>
                 <li>/</li>
-                <li><a href="bridal-car.html" class="active hover:font-bold">Trucking Services</a></li>
+                <li><a href="about.html" class="active hover:font-bold">About</a></li>
             </ul>
         </nav>
         <h2 class="text-4xl font-bold text-center text-[#D6AB6C] mt-5">Penguin Sales & Services Company</h2>
