--- a/auto-parts.html
+++ b/auto-parts.html
@@ -68,6 +68,15 @@
             </div>
         </div>
     </header>
+    <nav class="container mx-auto px-6 py-4 text-[#1E1D1D]">
+        <ul class="flex space-x-2">
+            <li><a href="/" class="hover:font-bold">Home</a></li>
+            <li>/</li>
+            <li><a href="services.html" class="hover:font-bold">Services</a></li>
+            <li>/</li>
+            <li><a href="auto-parts.html" class="active hover:font-bold">Auto Parts</a></li>
+        </ul>
+    </nav>
     <div class="h-[500px] flex flex-col items-center justify-center text-center">
         <h1 class="text-7xl font-bold text-[#D6AB6C]">404</h1>
         <p class="text-2xl text-[#1E1D1D] mt-4">Oops! The page you're looking for doesn't exist.</p>
