--- a/trucking.html
+++ b/trucking.html
@@ -73,7 +73,7 @@
                 <li>/</li>
                 <li><a href="services.html" class="hover:font-bold">Services</a></li>
                 <li>/</li>
-                <li><a href="bridal-car.html" class="active hover:font-bold">Trucking Services</a></li>
+                <li><a href="trucking.html" class="active hover:font-bold">Trucking Services</a></li>
             </ul>
         </nav>
         <h2 class="text-4xl font-bold text-center text-[#D6AB6C] mt-[20px]">Trucking Services</h2>
