--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
                 <nav>
                     <ul class="flex space-x-6 text-[#D6AB6C]">
                         <li class="relative group">
-                            <a href="services.html" class="Active hover:text-[#E3A262]">Services<i class='bx bx-caret-down'
+                            <a href="services.html" class="active hover:text-[#E3A262]">Services<i class='bx bx-caret-down'
                                     style="color:#e3a262"></i></a>
                             <ul
                                 class="absolute right-0 w-[400px] hidden bg-[#1E1D1D] text-white shadow-md rounded-md group-hover:block">
